# receivingNews_replication_package

./: .Rhistory  AUTHORS.md  README.md  requirements.txt  setup.cfg
R_environments/: ReceivingNews-Imprec_Polar_figures_env.RData
data/brier_score/: Receivingnews_Brier.mat
data/processed/: .Rhistory  ICC.csv  ReceivingNews_tables.mat  receivingNews_data.csv
data/stimuli/: News_evaluations.mat  stimuli_excel_for_IRR_G1.xlsx  stimuli_excel_for_IRR_G3.xlsx  stimuli_excel_for_IRR_G4.xlsx  stimuli_excel_for_IRR_G5.xlsx
matlab_toolboxes/: README.md  ValentinGuigon - MATLAB Tools.url
outputs/reports/: ReceivingNews-Bayesian_MLM-reporting.html  ReceivingNews-Bayesian_models-reporting.html  ReceivingNews-Behavioral_measures-reporting.html  ReceivingNews-Imprec_Polar_figures-reporting.html  ReceivingNews-MLM_rand2-reporting.html  ReceivingNews-Stimuli_ICC-reporting.html  ReceivingNews2-power_simulation-reporting.html
renv/: README.md
scripts/: README.md
scripts/analysis/: .Rhistory  Notes on the MLM.txt  ReceivingNews-Bayesian_Mixed_Linear_Models.R  ReceivingNews-Bayesian_models.R  ReceivingNews-Behavioral_measures.R  ReceivingNews-Imprec_Polar_figures.R  ReceivingNews-Mixed_Linear_Models_alternatives.R  ReceivingNews-Mixed_Linear_Models_alternatives_rand2.R  ReceivingNews-Mixed_Linear_Models_main.R  ReceivingNews-Mixed_Linear_Models_main_rand2.R  ReceivingNews-Stimuli_ICC.R  ReceivingNews2-Confidence_power_simulation.R  ReceivingNews2-power_simulation.R  ReceivingNews_Analyses_plots_article.m  (+1 more)
scripts/reporting/: .Rhistory  (+10 more)
stimuli/: Stimuli_list.xlsx
(+3063 files in other folders)
