[sdist]
formats = gztar

[check-manifest]
ignore =
    *.sh
    *.yml
    *.yaml
    analysis
    analysis/*
    data
    data/*
    figures
    figures/*
    matlab_toolboxes
    matlab_toolboxes/*

[metadata]
name = receivingnews
version = 0.0.1
description = The receivingNews project investigates how individual estimate the truthfulness of true and false news, their metacognitive abilites in doing so, and the predictors of preferences for receiving supplementary information that may disambiguate the content of the news.
author = Valentin Guigon
author_email = valentin.guigon@outlook.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_file = LICENSE

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find: